--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-	<title>Home</title>
+	<title>佛山市德优城家居用品有限公司</title>
 	<!-- custom-theme -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -53,7 +53,7 @@
 							<li class="active"><a href="index.html" class="effect-3">首页</a></li>
 							<li><a href="about.html" class="effect-3">产品中心</a></li>
 							<li><a href="blog.html" class="effect-3">服务案例</a></li>
-							<li><a href="blog.html" class="effect-3">招商加盟</a></li>
+							<li><a href="hezuo.html" class="effect-3">合作加盟</a></li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle effect-3" data-toggle="dropdown">家居百科<b class="caret"></b></a>
 								<ul class="dropdown-menu agile_short_dropdown">
