--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
-
+<html lang="cn">
 <head>
 	<title>佛山市德优城家居用品有限公司</title>
 	<!-- custom-theme -->
@@ -43,7 +42,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<h1><a class="navbar-brand" href="index.html"> <span>L</span>ifer</a></h1>
+					<h1><a class="navbar-brand" href="index.html"> <span>德</span>优城</a></h1>
 
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
