--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 					<p>始终坚持"一切为客户着想"的经营理念</p>
 					<div class="w3-button">
 						<div class="w3ls-button">
-							<a href="single.html" class="hvr-shutter-out-vertical">了解更多</a>
+							<a href="javascript:;" class="hvr-shutter-out-vertical">了解更多</a>
 						</div>
 						<div class="w3l-button">
-							<a href="#portfolio" class="hvr-shutter-out-vertical scroll ">关于我们</a>
+							<a href="javascript:;" class="hvr-shutter-out-vertical scroll ">关于我们</a>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -107,7 +107,7 @@
 			<div class="col-md-3 w3layouts_stats_left w3_counter_grid">
 				<span class="fa fa-bullhorn" aria-hidden="true"></span>
 				<p class="slogan">企业口号</p>
-				<h3>以人为本，敢为人先，因变制宜.</h3>
+				<h3>以人为本、敢为人先、因变制宜.</h3>
 			</div>
 			<div class="col-md-3 w3layouts_stats_left w3_counter_grid1">
 				<span class="fa fa-instagram" aria-hidden="true"></span>
