--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<h1><a class="navbar-brand" href="index.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/logo.png" alt=""/></a></h1>
+					<h1><a class="navbar-brand" href="index.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/logo.jpg" alt=""/></a></h1>
 
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,11 +51,11 @@
 					<nav class="link-effect-2" id="link-effect-2">
 						<ul class="nav navbar-nav">
 							<li class="active"><a href="index.html" class="effect-3">首页</a></li>
-							<li><a href="about.html" class="effect-3">产品中心</a></li>
-							<li><a href="blog.html" class="effect-3">服务案例</a></li>
-							<li><a href="blog.html" class="effect-3">招商加盟</a></li>
+							<li><a href="javascript:;" class="effect-3">产品中心</a></li>
+							<li><a href="javascript:;" class="effect-3">服务案例</a></li>
+							<li><a href="hezuo1.html" class="effect-3">合作加盟</a></li>
 							<li class="dropdown">
-								<a href="#" class="dropdown-toggle effect-3" data-toggle="dropdown">家居百科<b class="caret"></b></a>
+								<a href="javascript:;" class="dropdown-toggle effect-3" data-toggle="dropdown">家居百科<b class="caret"></b></a>
 								<ul class="dropdown-menu agile_short_dropdown">
 									<li><a href="icons.html">家装选购</a></li>
 									<li><a href="typography.html">家居搭配</a></li>
