--- a/hezuo1.html
+++ b/hezuo1.html
@@ -95,7 +95,7 @@
 			<div class="agile_wthree_inner_grids">
 				<div class="col-md-8 single-left">
 					<div class="single-left1">
-						<img src="images/2/woshou.jpg" alt=" " class="img-responsive" />
+						<img src="https://i1.wp.com/deyoucheng.com/images/2/woshou.jpg" alt=" " class="img-responsive" />
 						<h3>尽我们所能，不辜负您的信赖</h3>
 						<ul>
 							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">合作伙伴</a></li>
@@ -104,11 +104,11 @@
 						</ul>
 						<p>我们非常高兴地宣布，经过全国范围内的严格筛选，我们成功地与一系列具有雄厚实力的家具工厂达成了战略合作关系。这些工厂在行业内拥有卓越的声誉和丰富的经验，致力于为您打造高质量、个性化的家具产品。
 							<i>优质家具工厂联盟，打造卓越家居平台</i>我们的合作伙伴们拥有卓越的设计团队和先进的生产设备，采用环保材料和精湛工艺，为您提供一系列涵盖卧室、客厅、厨房、餐厅和办公等多个空间的家具产品。无论是现代简约风格，还是古典奢华风格，我们都能满足您的需求。</p>
-							<img src="images/2/gchezuo_1.jpg" alt=" " class="img-responsive" />
+							<img src="https://i1.wp.com/deyoucheng.com/images/2/gchezuo_1.jpg" alt=" " class="img-responsive" />
 							
 						<p>我们选择的合作伙伴不仅在产品质量上表现出色，同时注重可持续发展和环保理念。他们致力于为社会创造价值，并为消费者提供健康、舒适、美观的家居环境。
 							<i>诚邀家居行业精英，共创美好未来！</i>现在，我们正在继续寻找更多优质的家具工厂加入我们的联盟。我们希望与更多具有创新精神、追求卓越品质的工厂合作，共同打造一个更加繁荣、可持续发展的家居平台。</p>
-						<img src="images/2/gchezuo_2.jpg" alt=" " class="img-responsive" />
+						<img src="https://i1.wp.com/deyoucheng.com/images/2/gchezuo_2.jpg" alt=" " class="img-responsive" />
 						<p>如果您对合作感兴趣，欢迎随时联系我们。我们期待与更多优质工厂携手共进，为您带来更多优质的家居产品和服务。<i>我们期待您的到来！</i></p>
 					</div>
 					
@@ -144,7 +144,7 @@
 							<div class="posts-grids w3-posts-grids">
 								<div class="posts-grid w3-posts-grid">
 									<div class="posts-grid-left w3-posts-grid-left">
-										<a href="single.html"><img src="images/g3.jpg" alt="" class="img-responsive" /></a>
+										<a href="single.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/g3.jpg" alt="" class="img-responsive" /></a>
 									</div>
 									<div class="posts-grid-right w3-posts-grid-right">
 										<h4><a href="single.html">德优城旗下强大的营销团队</a></h4>
@@ -156,7 +156,7 @@
 								</div>
 								<div class="posts-grid w3-posts-grid">
 									<div class="posts-grid-left w3-posts-grid-left">
-										<a href="single.html"><img src="images/g6.jpg" alt=" " class="img-responsive" /></a>
+										<a href="single.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/g6.jpg" alt=" " class="img-responsive" /></a>
 									</div>
 									<div class="posts-grid-right w3-posts-grid-right">
 										<h4><a href="single.html">与美国席梦思达成战略合作伙伴</a></h4>
