--- a/hezuo2.html
+++ b/hezuo2.html
@@ -85,7 +85,7 @@
 			<div class="agile_wthree_inner_grids">
 				<div class="col-md-8 single-left">
 					<div class="single-left1">
-						<img src="images/2/woshou1.jpg" alt=" " class="img-responsive" />
+						<img src="https://i1.wp.com/deyoucheng.com/images/2/woshou1.jpg" alt=" " class="img-responsive" />
 						<h3>探索无限可能，我们一起启航!</h3>
 						<ul>
 							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">合作伙伴</a></li>
@@ -94,7 +94,7 @@
 						</ul>
 						<p>在德优城家居公司的旗帜下，有一支强大的营销团队，他们热情洋溢，富有创新精神，始终致力于为您打开成功的大门。
 							<i>诚邀家居行业精英，共创美好未来！</i>德优城营销团队由行业内的精英人士组成，他们拥有丰富的营销经验和卓越的策划能力。无论是线上还是线下，无论是传统媒体还是新媒体，他们都能找到最恰当的切入点，将我们的产品和服务推广到每一个角落。</p>
-							<img src="images/2/yytd2.jpg" alt="营销团队" class="img-responsive" />
+							<img src="https://i1.wp.com/deyoucheng.com/images/2/yytd2.jpg" alt="营销团队" class="img-responsive" />
 							
 						<p>他们善于挖掘产品的独特之处，用创新的方式呈现给消费者，让我们的家居产品在激烈的市场竞争中独树一帜。他们的努力让我们的品牌在行业内保持领先地位，赢得了广大消费者的信赖和好评。</p>
 						<p>德优城家居诚挚地邀请您加入！作为我们的合作伙伴，我们将为您提供全面的市场支持，包括品牌推广、销售渠道拓展、产品研发等方面的合作，帮助您实现业务增长和盈利提升。<i>我们欢迎所有符合以下条件的家居行业精英：</i></p>
@@ -160,7 +160,7 @@
 							<div class="posts-grids w3-posts-grids">
 								<div class="posts-grid w3-posts-grid">
 									<div class="posts-grid-left w3-posts-grid-left">
-										<a href="single.html"><img src="images/g3.jpg" alt="" class="img-responsive" /></a>
+										<a href="single.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/g3.jpg" alt="" class="img-responsive" /></a>
 									</div>
 									<div class="posts-grid-right w3-posts-grid-right">
 										<h4><a href="single.html">德优城旗下强大的营销团队</a></h4>
@@ -172,7 +172,7 @@
 								</div>
 								<div class="posts-grid w3-posts-grid">
 									<div class="posts-grid-left w3-posts-grid-left">
-										<a href="single.html"><img src="images/g6.jpg" alt=" " class="img-responsive" /></a>
+										<a href="single.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/g6.jpg" alt=" " class="img-responsive" /></a>
 									</div>
 									<div class="posts-grid-right w3-posts-grid-right">
 										<h4><a href="single.html">与美国席梦思达成战略合作伙伴</a></h4>
