--- a/hezuo2.html
+++ b/hezuo2.html
@@ -48,13 +48,13 @@
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle effect-3" data-toggle="dropdown">家居百科<b class="caret"></b></a>
 								<ul class="dropdown-menu agile_short_dropdown">
-									<li><a href="icons.html">家装选购</a></li>
-									<li><a href="typography.html">家居搭配</a></li>
-									<li><a href="icons.html">家具包养</a></li>
-									<li><a href="typography.html">家具科普</a></li>
+									<li><a href="javascript:;">家装选购</a></li>
+									<li><a href="javascript:;">家居搭配</a></li>
+									<li><a href="javascript:;">家具保养</a></li>
+									<li><a href="javascript:;">家具科普</a></li>
 								</ul>
 							</li>
-							<li><a href="mail.html" class="effect-3">关于我们</a></li>
+							<li><a href="javascript:;" class="effect-3">关于我们</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -141,17 +141,17 @@
 							<h3>地区团队</h3>
 							<ul>
 								<li><i class="fa fa-check" aria-hidden="true"></i>
-								<a href="single.html">四会团队(28人)</a></li>
+								<a href="javascript:;">广东省团队 (128人)</a></li>
 								<li><i class="fa fa-check" aria-hidden="true"></i>
-								<a href="single.html">高要团队(18人)</a></li>
+								<a href="javascript:;">广西省团队 (108人)</a></li>
 								<li><i class="fa fa-check" aria-hidden="true"></i>
-								<a href="single.html">三水团队(15人)</a></li>
+								<a href="javascript:;">江西省团队 (18人)</a></li>
 								<li><i class="fa fa-check" aria-hidden="true"></i>
-								<a href="single.html">顺德团队(80人)</a></li>
+								<a href="javascript:;">福建省团队 (25人)</a></li>
 								<li><i class="fa fa-check" aria-hidden="true"></i>
-								<a href="single.html">广州团队(108人)</a></li>
+								<a href="javascript:;">湖南省团队 (38人)</a></li>	
 								<li><i class="fa fa-check" aria-hidden="true"></i>
-								<a href="single.html">肇庆团队(128人)</a></li>
+								<a href="javascript:;">海南省团队 (15人)</a></li>
 
 							</ul>
 						</div>
@@ -160,10 +160,10 @@
 							<div class="posts-grids w3-posts-grids">
 								<div class="posts-grid w3-posts-grid">
 									<div class="posts-grid-left w3-posts-grid-left">
-										<a href="single.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/g3.jpg" alt="" class="img-responsive" /></a>
+										<a href="javascript:;"><img src="https://i1.wp.com/deyoucheng.com/images/g3.jpg" alt="" class="img-responsive" /></a>
 									</div>
 									<div class="posts-grid-right w3-posts-grid-right">
-										<h4><a href="single.html">德优城旗下强大的营销团队</a></h4>
+										<h4><a href="javascript:;">德优城旗下强大的营销团队</a></h4>
 										<ul class="wthree_blog_events_list">
 											<li><i class="fa fa-calendar" aria-hidden="true"></i>10/7/2022</li>
 										</ul>
@@ -172,10 +172,10 @@
 								</div>
 								<div class="posts-grid w3-posts-grid">
 									<div class="posts-grid-left w3-posts-grid-left">
-										<a href="single.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/g6.jpg" alt=" " class="img-responsive" /></a>
+										<a href="javascript:;"><img src="https://i1.wp.com/deyoucheng.com/images/g6.jpg" alt=" " class="img-responsive" /></a>
 									</div>
 									<div class="posts-grid-right w3-posts-grid-right">
-										<h4><a href="single.html">与美国席梦思达成战略合作伙伴</a></h4>
+										<h4><a href="javascript:;">与美国席梦思达成战略合作伙伴</a></h4>
 										<ul class="wthree_blog_events_list">
 											<li><i class="fa fa-calendar" aria-hidden="true"></i>12/7/2022</li>
 										</ul>
