--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 							<li class="dropdown">
 								<a href="javascript:;" class="dropdown-toggle effect-3" data-toggle="dropdown">家居百科<b class="caret"></b></a>
 								<ul class="dropdown-menu agile_short_dropdown">
-									<li><a href="icons.html">家装选购</a></li>
-									<li><a href="typography.html">家居搭配</a></li>
-									<li><a href="icons.html">家具包养</a></li>
-									<li><a href="typography.html">家具科普</a></li>
+									<li><a href="javascript:;">家装选购</a></li>
+									<li><a href="javascript:;">家居搭配</a></li>
+									<li><a href="javascript:;">家具保养</a></li>
+									<li><a href="javascript:;">家具科普</a></li>
 								</ul>
 							</li>
-							<li><a href="mail.html" class="effect-3">关于我们</a></li>
+							<li><a href="javascript:;" class="effect-3">关于我们</a></li>
 						</ul>
 					</nav>
 				</div>
