--- a/hezuo1.html
+++ b/hezuo1.html
@@ -159,7 +159,7 @@
 										<a href="javascript:;"><img src="https://i1.wp.com/deyoucheng.com/images/g6.jpg" alt=" " class="img-responsive" /></a>
 									</div>
 									<div class="posts-grid-right w3-posts-grid-right">
-										<h4><a href="javascript:;">与美国席梦思达成战略合作伙伴</a></h4>
+										<h4><a href="ximengsi.html">与美国席梦思成为战略合作伙伴</a></h4>
 										<ul class="wthree_blog_events_list">
 											<li><i class="fa fa-calendar" aria-hidden="true"></i>12/7/2022</li>
 										</ul>
