--- a/ximengsi.html
+++ b/ximengsi.html
@@ -141,7 +141,7 @@
 							<div class="posts-grids w3-posts-grids">
 								<div class="posts-grid w3-posts-grid">
 									<div class="posts-grid-left w3-posts-grid-left">
-										<a href="javascript:;"><img src="https://i1.wp.com/deyoucheng.com/images/g3.jpg" alt="" class="img-responsive" /></a>
+										<a href="javascript:;"><img src="https://i1.wp.com/deyoucheng.com/images/2/news-yxtd.jpg" alt="" class="img-responsive" /></a>
 									</div>
 									<div class="posts-grid-right w3-posts-grid-right">
 										<h4><a href="javascript:;">德优城旗下强大的营销团队</a></h4>
@@ -153,7 +153,7 @@
 								</div>
 								<div class="posts-grid w3-posts-grid">
 									<div class="posts-grid-left w3-posts-grid-left">
-										<a href="javascript:;"><img src="https://i1.wp.com/deyoucheng.com/images/g6.jpg" alt=" " class="img-responsive" /></a>
+										<a href="hezuo2.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/news-xms.jpg" alt=" " class="img-responsive" /></a>
 									</div>
 									<div class="posts-grid-right w3-posts-grid-right">
 										<h4><a href="javascript:;">与佛山红木工厂达成战略合作伙伴</a></h4>
