--- a/hezuo1.html
+++ b/hezuo1.html
@@ -144,10 +144,10 @@
 							<div class="posts-grids w3-posts-grids">
 								<div class="posts-grid w3-posts-grid">
 									<div class="posts-grid-left w3-posts-grid-left">
-										<a href="javascript:;"><img src="https://i1.wp.com/deyoucheng.com/images/g3.jpg" alt="" class="img-responsive" /></a>
+										<a href="hezuo2.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/news-yxtd.jpg" alt="" class="img-responsive" /></a>
 									</div>
 									<div class="posts-grid-right w3-posts-grid-right">
-										<h4><a href="javascript:;">德优城旗下强大的营销团队</a></h4>
+										<h4><a href="hezuo2.html">德优城旗下强大的营销团队</a></h4>
 										<ul class="wthree_blog_events_list">
 											<li><i class="fa fa-calendar" aria-hidden="true"></i>10/7/2022</li>
 										</ul>
@@ -156,7 +156,7 @@
 								</div>
 								<div class="posts-grid w3-posts-grid">
 									<div class="posts-grid-left w3-posts-grid-left">
-										<a href="javascript:;"><img src="https://i1.wp.com/deyoucheng.com/images/g6.jpg" alt=" " class="img-responsive" /></a>
+										<a href="ximengsi.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/news-xms.jpg" alt=" " class="img-responsive" /></a>
 									</div>
 									<div class="posts-grid-right w3-posts-grid-right">
 										<h4><a href="ximengsi.html">与美国席梦思成为战略合作伙伴</a></h4>
