--- a/hezuo2.html
+++ b/hezuo2.html
@@ -211,7 +211,7 @@
 					<h2>联系<span>我们</span></h2>
 					    <ul class="con_inner_text">
 							<li><span class="fa fa-map-marker" aria-hidden="true">
-							</span>广东省佛山市乐从镇<label>家具城A座23号</label></li>
+							</span>广东省顺德区乐从镇南村工业区<label>佛山市德优城家居有限公司</label></li>
 							<li><span class="fa fa-envelope-o" aria-hidden="true"></span>dychome@126.com</li>
 							<li><span class="fa fa-phone" aria-hidden="true"></span>+86 13800138000</li>
 						</ul>
