--- a/ximengsi.html
+++ b/ximengsi.html
@@ -95,6 +95,8 @@
 						
 						<img src="https://i1.wp.com/deyoucheng.com/images/2/ximengsi-3.jpg" alt="美国席梦思3" class="img-responsive" />
 						<p><i>| 百年经典 国际品牌</i>&nbsp;&nbsp;从美国到中国，距离很远，爱从未改变<br/>&nbsp;&nbsp;美国席梦思作为国际品牌走过超过一个世纪的时光，时至今日，“席梦思”这三个字，早已超越一个品牌，席梦思成为优质床垫的代名词。即使到了现在，中国人仍会将优质的弹簧床垫称呼为“席梦思”。<br/>&nbsp;&nbsp;优质睡眠与优质生活是不可分割的，多年来，美国席梦思床垫一直贯穿着生命科学、有益睡眠的宗旨，进入中国市场以来大量投入国内不同人群睡眠调查与睡眠科学研究。</p>
+						
+						<img src="https://i1.wp.com/deyoucheng.com/images/2/ximengsi-8.jpg" alt="美国席梦思3" class="img-responsive" />
 						<p>&nbsp;&nbsp;美国席梦思整体家居集团一向认同科学研究的重要性，并致力以中国睡眠科学意念去制造优质的睡眠产品，确保国人得到更好的睡眠。<i>美国席梦思第6代传承人对品牌历史的介绍：</i></p>
 						<p>在19世纪后期，美国席梦思床垫诞生于美国，由此，开启了美国席梦思整体家居集团在美国睡眠领域的传奇之旅。<br/>&nbsp;&nbsp;1881年，席梦思床垫开始大量生产钢丝床垫<br/>&nbsp;&nbsp;1888年，备有螺旋型弹簧的钢丝弹簧床面世。席梦思床垫又促进了床垫的生产流程，因此弹簧床垫可以更快更大量的生产，让更多人可以享受更优质的睡眠。<br/>&nbsp;&nbsp;1996年，席梦思床垫推出棉质床面布床垫<br/>&nbsp;&nbsp;2001年，席梦思床垫首席工程师Smart先生发明能自动生产独立袋装弹簧的机器，美国席梦思床垫面世。同年，席梦思资助首个睡眠科学研究，对后世影响深远。<br/>&nbsp;&nbsp;2003年，受30年代美国经济萧条影响下，很多美国家庭的家居环境变小。因此席梦思推出梳化床垫的理念，让一件家俬既是日间的座椅，又是夜晚的睡床，节省床垫占用家居生活空间。<br/>&nbsp;&nbsp;2007年，美国席梦思床垫的首席工程师发明了能量产独立袋装弹簧的机器，此举更是改变了弹簧床垫的制造史。<br/>&nbsp;&nbsp;2011年，美国席梦思床垫发现人类睡眠姿势每夜平均改变达36次，这项先进的研究也奠定了今日睡眠科技的基础，之后美国席梦思整体家居集团也着手将床垫朝同床不相互干扰的方向研发，让人们可以享受一整晚不受干扰的优质睡眠。</p>
 						<p>&nbsp;&nbsp;多年来，美国席梦思整体家居集团仍持续以科学方法提供最好的睡眠品质，让床垫增进人体健康的功效更往前迈向一大步，从制作第一张弹簧床垫开始，辉煌了一个多世纪的美国席梦思床垫陪伴著全球无数人度过每个好眠的夜，未来美国席梦思床垫的经典仍将持续在世界各地流传下去。</p>
@@ -192,7 +194,7 @@
 					<h2>联系<span>我们</span></h2>
 					    <ul class="con_inner_text">
 							<li><span class="fa fa-map-marker" aria-hidden="true">
-							</span>广东省佛山市乐从镇<label>家具城A座23号</label></li>
+							</span>广东省顺德区乐从镇南村工业区<label>佛山市德优城家居有限公司</label></li>
 							<li><span class="fa fa-envelope-o" aria-hidden="true"></span>dychome@126.com</li>
 							<li><span class="fa fa-phone" aria-hidden="true"></span>+86 13800138000</li>
 						</ul>
