--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
 			<div class="agile_wthree_inner_grids">
 
 				<div class="col-md-4 about_agileinfo">
-					<a href="single.html" role="button"><img src="https://i1.wp.com/deyoucheng.com/images/2/news5.jpg" alt="" />
-					<a href="single.html" role="button"><h4>德优城家居家具：家居新品发布</h4></a>
-					<p>2022年3月8号，德优城家居家具第二期新品发布，于象州石龙生产基地举行..</p>
+					<a href="single.html" role="button"><img src="https://i1.wp.com/deyoucheng.com/images/2/new6.png" alt="" />
+					<a href="single.html" role="button"><h4>德优城家居：品牌发布会</h4></a>
+					<p>2023年10月份，德优城家居第一期品牌发布会，于百度、搜狐、网易、新浪、中国企业家日报、南方头条、家居头条、环球品牌网、房产中国、中华家具网..等多家一线网站进行发布</p>
 
 				</div>
 				
