--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 				<div class="col-md-4 about_agileinfo">
 					<img src="https://i1.wp.com/deyoucheng.com/images/2/new8.png" alt="" />
 					<h4>德优城整体家居服务</h4>
-					<p>德优城提供全屋家居服务，为您打造温馨舒适的家居环境。专业团队，贴心服务，让您省心省力。从设计到安装，我们始终用心呵护每一个细节，让您的家更温馨、更美好..</p>
+					<p>德优城提供全屋家居服务，为您打造温馨舒适的家居环境。专业团队，贴心服务，让您省心省力。从家庭洁净到家庭健康，我们始终用心呵护每一个细节，让您的家更温馨、更美好..</p>
 					
 
 				</div>
