--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 							<li><span class="fa fa-map-marker" aria-hidden="true">
 							</span>广东省顺德区乐从镇南村工业区<label>佛山市德优城家居有限公司</label></li>
 							<li><span class="fa fa-envelope-o" aria-hidden="true"></span>dychome@126.com</li>
-							<li><span class="fa fa-phone" aria-hidden="true"></span>详情请联系业务经理</li>
+							<li><span class="fa fa-phone" aria-hidden="true"></span>请联系业务经理</li>
 						</ul>
 				</div>
 				<div class="col-md-4 w3layouts_footer_grid">
