--- a/hezuo2.html
+++ b/hezuo2.html
@@ -182,6 +182,18 @@
 									</div>
 									<div class="clearfix"> </div>
 								</div>
+								<div class="posts-grid w3-posts-grid">
+									<div class="posts-grid-left w3-posts-grid-left">
+										<a href="ximengsi.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/news-xms.jpg" alt=" " class="img-responsive" /></a>
+									</div>
+									<div class="posts-grid-right w3-posts-grid-right">
+										<h4><a href="/html/hezuo2/acticle_2.html">广东谢先生</a></h4>
+										<ul class="wthree_blog_events_list">
+											<li><i class="fa fa-calendar" aria-hidden="true"></i>12/7/2022</li>
+										</ul>
+									</div>
+									<div class="clearfix"> </div>
+								</div>
 							</div>
 						</div>
 						<div class="tags tags1 w3layouts-tags">
