--- a/hezuo2.html
+++ b/hezuo2.html
@@ -184,7 +184,7 @@
 								</div>
 								<div class="posts-grid w3-posts-grid">
 									<div class="posts-grid-left w3-posts-grid-left">
-										<a href="ximengsi.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/news-xms.jpg" alt=" " class="img-responsive" /></a>
+										<a href="/html/hezuo2/acticle_2.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/news-xms.jpg" alt=" " class="img-responsive" /></a>
 									</div>
 									<div class="posts-grid-right w3-posts-grid-right">
 										<h4><a href="/html/hezuo2/acticle_2.html">广东谢先生</a></h4>
