--- a/hezuo1.html
+++ b/hezuo1.html
@@ -70,7 +70,7 @@
 			<ul class="w3_short">
 				<li><a href="index.html">主页</a><span>|</span></li>
 				<li>工厂加盟<span>|</span></li>
-				<li><a href="hezuo2.html">营销团队</a></li>
+				<li><a href="/html/hezuo2/list_gd_1.html">营销团队</a></li>
 				<!-- <li>工厂加盟</li> -->
 			</ul>
 		</div>
