--- a/html/hezuo2/list_gd_1.html
+++ b/html/hezuo2/list_gd_1.html
@@ -85,60 +85,60 @@
 				<div class="col-md-8 event-left w3-agile-event-left">
 					<div class="event-left1 w3-agile-event-left1">
 						<div class="event-left1-left agile-event-left1-left">
-							<a href="single.html"><img src="/images/3/x-man1.png" alt=" " class="img-responsive" /></a>
+							<a href="hezuo2.html"><img src="/images/3/x-man1.png" alt=" " class="img-responsive" /></a>
 							<div class="event-left1-left-pos agileits-w3layouts-event-left1-left-pos">
 								<ul>
-									<li><a href="#"><span class="fa fa-user" aria-hidden="true"></span> Leo Paul</a></li>
+									<li><a href="hezuo2.html"><span class="fa fa-user" aria-hidden="true"></span> Leo Paul</a></li>
 								</ul>
 							</div>
 						</div>
 						<div class="event-left1-right w3-agileits-event-left1-right">
 							<h4>2nd / June 2017</h4>
-							<h5><a href="single.html">consectetur adipiscing elit, sed do eiusmod</a></h5>
+							<h5><a href="hezuo2.html">我们强大的营销团队</a></h5>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.In elementum, magna id pellentesque
 								auctor, risus dolor congue urna, nec dapibus eros magna a odio. Duis laoreet risus eget malesuada consequat.</p>
 							<div class="agileits-button two">
-								<a class="btn btn-primary btn-lg hvr-underline-from-left" href="single.html" role="button">Read More »</a>
+								<a class="btn btn-primary btn-lg hvr-underline-from-left" href="hezuo2.html" role="button">Read More »</a>
 							</div>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
 					<div class="event-left1 w3-agile-event-left1">
 						<div class="event-left1-left agile-event-left1-left">
-							<a href="single.html"><img src="/images/3/x-women1.png" alt=" " class="img-responsive" /></a>
+							<a href="acticle_1.html"><img src="/images/3/x-women1.png" alt=" " class="img-responsive" /></a>
 							<div class="event-left1-left-pos agileits-w3layouts-event-left1-left-pos">
 								<ul>
-									<li><a href="#"><span class="fa fa-user" aria-hidden="true"></span> John Paul</a></li>
+									<li><a href="acticle_1.html"><span class="fa fa-user" aria-hidden="true"></span> John Paul</a></li>
 								</ul>
 							</div>
 						</div>
 						<div class="event-left1-right w3-agileits-event-left1-right">
 							<h4>22nd / June 2017</h4>
-							<h5><a href="single.html">consectetur adipiscing elit, sed do eiusmod</a></h5>
+							<h5><a href="acticle_1.html">广东黎先生</a></h5>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.In elementum, magna id pellentesque
 								auctor, risus dolor congue urna, nec dapibus eros magna a odio. Duis laoreet risus eget malesuada consequat.</p>
 							<div class="agileits-button two">
-								<a class="btn btn-primary btn-lg hvr-underline-from-left" href="single.html" role="button">Read More »</a>
+								<a class="btn btn-primary btn-lg hvr-underline-from-left" href="acticle_1.html" role="button">Read More »</a>
 							</div>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
 					<div class="event-left1 w3-agile-event-left1">
 						<div class="event-left1-left w3ls-event-left1-left">
-							<a href="single.html"><img src="/images/3/x-women1.png" alt=" " class="img-responsive" /></a>
+							<a href="acticle_1.html"><img src="/images/3/x-women1.png" alt=" " class="img-responsive" /></a>
 							<div class="event-left1-left-pos w3l-event-left1-left-pos">
 								<ul>
-									<li><a href="#"><span class="fa fa-user" aria-hidden="true"></span>Richard</a></li>
+									<li><a href="acticle_1.html"><span class="fa fa-user" aria-hidden="true"></span>Richard</a></li>
 								</ul>
 							</div>
 						</div>
 						<div class="event-left1-right w3-event-left1-right">
 							<h4>28th / June 2017</h4>
-							<h5><a href="single.html">Neque porro quisquam est, qui dolorem ipsum quia dolor</a></h5>
+							<h5><a href="acticle_1.html">广东谢先生</a></h5>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.In elementum, magna id pellentesque
 								auctor, risus dolor congue urna, nec dapibus eros magna a odio. Duis laoreet risus eget malesuada consequat.</p>
 							<div class="agileits-button two">
-								<a class="btn btn-primary btn-lg hvr-underline-from-left" href="single.html" role="button">Read More »</a>
+								<a class="btn btn-primary btn-lg hvr-underline-from-left" href="acticle_1.html" role="button">Read More »</a>
 							</div>
 						</div>
 						<div class="clearfix"> </div>
