--- a/html/hezuo2/acticle_1.html
+++ b/html/hezuo2/acticle_1.html
@@ -34,17 +34,17 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<h1><a class="navbar-brand" href="index.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/logo.jpg" alt=""/></a></h1>
+					<h1><a class="navbar-brand" href="/index.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/logo.jpg" alt=""/></a></h1>
 
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
 					<nav class="link-effect-2" id="link-effect-2">
 						<ul class="nav navbar-nav">
-							<li><a href="index.html" class="effect-3">首页</a></li>
+							<li><a href="/index.html" class="effect-3">首页</a></li>
 							<li><a href="javascript:;" class="effect-3">产品中心</a></li>
 							<li><a href="javascript:;" class="effect-3">服务案例</a></li>
-							<li class="active"><a href="hezuo.html" class="effect-3">合作加盟</a></li>
+							<li class="active"><a href="/hezuo.html" class="effect-3">合作加盟</a></li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle effect-3" data-toggle="dropdown">家居百科<b class="caret"></b></a>
 								<ul class="dropdown-menu agile_short_dropdown">
@@ -68,8 +68,8 @@
 		<div class="agile_inner_breadcrumb">
 
 			<ul class="w3_short">
-				<li><a href="index.html">主页</a><span>|</span></li>
-				<li><a href="hezuo1.html">工厂加盟</a><span>|</span></li>
+				<li><a href="/index.html">主页</a><span>|</span></li>
+				<li><a href="/hezuo1.html">工厂加盟</a><span>|</span></li>
 				<li>营销团队</li>
 			</ul>
 		</div>
@@ -138,10 +138,10 @@
 							<div class="posts-grids w3-posts-grids">
 								<div class="posts-grid w3-posts-grid">
 									<div class="posts-grid-left w3-posts-grid-left">
-										<a href="hezuo2.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/news-yxtd.jpg" alt="" class="img-responsive" /></a>
+										<a href="/hezuo2.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/news-yxtd.jpg" alt="" class="img-responsive" /></a>
 									</div>
 									<div class="posts-grid-right w3-posts-grid-right">
-										<h4><a href="hezuo2.html">德优城旗下强大的营销团队</a></h4>
+										<h4><a href="/hezuo2.html">德优城旗下强大的营销团队</a></h4>
 										<ul class="wthree_blog_events_list">
 											<li><i class="fa fa-calendar" aria-hidden="true"></i>10/7/2022</li>
 										</ul>
@@ -150,10 +150,10 @@
 								</div>
 								<div class="posts-grid w3-posts-grid">
 									<div class="posts-grid-left w3-posts-grid-left">
-										<a href="ximengsi.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/news-xms.jpg" alt=" " class="img-responsive" /></a>
+										<a href="/ximengsi.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/news-xms.jpg" alt=" " class="img-responsive" /></a>
 									</div>
 									<div class="posts-grid-right w3-posts-grid-right">
-										<h4><a href="ximengsi.html">与美国席梦思成为战略合作伙伴</a></h4>
+										<h4><a href="/ximengsi.html">与美国席梦思成为战略合作伙伴</a></h4>
 										<ul class="wthree_blog_events_list">
 											<li><i class="fa fa-calendar" aria-hidden="true"></i>12/7/2022</li>
 										</ul>
