--- a/html/hezuo2/list_gd_1.html
+++ b/html/hezuo2/list_gd_1.html
@@ -34,17 +34,17 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<h1><a class="navbar-brand" href="index.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/logo.jpg" alt=""/></a></h1>
+					<h1><a class="navbar-brand" href="/index.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/logo.jpg" alt=""/></a></h1>
 
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
 					<nav class="link-effect-2" id="link-effect-2">
 						<ul class="nav navbar-nav">
-							<li><a href="index.html" class="effect-3">首页</a></li>
+							<li><a href="/index.html" class="effect-3">首页</a></li>
 							<li><a href="javascript:;" class="effect-3">产品中心</a></li>
 							<li><a href="javascript:;" class="effect-3">服务案例</a></li>
-							<li class="active"><a href="hezuo.html" class="effect-3">合作加盟</a></li>
+							<li class="active"><a href="/hezuo.html" class="effect-3">合作加盟</a></li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle effect-3" data-toggle="dropdown">家居百科<b class="caret"></b></a>
 								<ul class="dropdown-menu agile_short_dropdown">
@@ -85,20 +85,20 @@
 				<div class="col-md-8 event-left w3-agile-event-left">
 					<div class="event-left1 w3-agile-event-left1">
 						<div class="event-left1-left agile-event-left1-left">
-							<a href="hezuo2.html"><img src="/images/3/x-man1.png" alt=" " class="img-responsive" /></a>
+							<a href="/hezuo2.html"><img src="/images/3/x-man1.png" alt=" " class="img-responsive" /></a>
 							<div class="event-left1-left-pos agileits-w3layouts-event-left1-left-pos">
 								<ul>
-									<li><a href="hezuo2.html"><span class="fa fa-user" aria-hidden="true"></span> Leo Paul</a></li>
+									<li><a href="/hezuo2.html"><span class="fa fa-user" aria-hidden="true"></span> Leo Paul</a></li>
 								</ul>
 							</div>
 						</div>
 						<div class="event-left1-right w3-agileits-event-left1-right">
 							<h4>2nd / June 2017</h4>
-							<h5><a href="hezuo2.html">我们强大的营销团队</a></h5>
+							<h5><a href="/hezuo2.html">我们强大的营销团队</a></h5>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.In elementum, magna id pellentesque
 								auctor, risus dolor congue urna, nec dapibus eros magna a odio. Duis laoreet risus eget malesuada consequat.</p>
 							<div class="agileits-button two">
-								<a class="btn btn-primary btn-lg hvr-underline-from-left" href="hezuo2.html" role="button">Read More »</a>
+								<a class="btn btn-primary btn-lg hvr-underline-from-left" href="/hezuo2.html" role="button">Read More »</a>
 							</div>
 						</div>
 						<div class="clearfix"> </div>
