--- a/html/hezuo2/list_gd_1.html
+++ b/html/hezuo2/list_gd_1.html
@@ -79,7 +79,7 @@
 	<div class="banner-bottom inner">
 		<div class="container">
 			<div class="wthree_head_section">
-				<h3 class="w3l_header w3_agileits_header">营销<span>团队人员</span></h3>
+				<h3 class="w3l_header w3_agileits_header">杰出<span>团队成员</span></h3>
 			</div>
 			<div class="agile_wthree_inner_grids">
 				<div class="col-md-8 event-left w3-agile-event-left">
