--- a/html/hezuo2/acticle_2.html
+++ b/html/hezuo2/acticle_2.html
@@ -7,8 +7,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="keywords" content="德优城,德优城家居,营销团队,战略合作伙伴" />
 	<meta name="description" content="德优城家居有限公司旗下的强大营销推广团队" />
-	<link rel="icon" href="./favicon.ico" mce_href="/favicon.ico" type="image/x-icon">
-	<link rel="shortcut icon" href="./favicon.ico" mce_href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" mce_href="/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="/favicon.ico" mce_href="/favicon.ico" type="image/x-icon">
 	<!-- //custom-theme -->
 	<link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.css" rel="stylesheet" />
     <link href="/css/blog.css" rel="stylesheet" type="text/css" media="all" />
@@ -79,7 +79,7 @@
 	<div class="banner-bottom inner">
 		<div class="container">
 			<div class="wthree_head_section">
-				<h3 class="w3l_header w3_agileits_header">我们强大的营销团队</h3>
+				<h3 class="w3l_header w3_agileits_header">[核心]广东黎先生</h3>
 				<h4></h4>
 			</div>
 			<div class="agile_wthree_inner_grids">
