--- a/html/hezuo2/acticle_1.html
+++ b/html/hezuo2/acticle_1.html
@@ -15,7 +15,7 @@
 	<link href="/css/single.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="/css/style.css" rel="stylesheet" type="text/css" media="all" />
 	<!-- font-awesome-icons -->
-	<link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
+	<link href="https://cdn.staticfile.org/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
 	<!-- //font-awesome-icons -->
 
 </head>
