--- a/html/hezuo2/list_gd_1.html
+++ b/html/hezuo2/list_gd_1.html
@@ -14,7 +14,7 @@
 	<link href="/css/blog.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="/css/style.css" rel="stylesheet" type="text/css" media="all" />
 	<!-- font-awesome-icons -->
-	<link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet" />
+	<link href="https://cdn.staticfile.org/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet" />
 	<!-- //font-awesome-icons -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,400,400i,500,500i,600,600i,700,700i,800" rel="stylesheet">
