--- a/hezuo1.html
+++ b/hezuo1.html
@@ -11,11 +11,11 @@
 	<link rel="shortcut icon" href="./favicon.ico" mce_href="/favicon.ico" type="image/x-icon">
 	<!-- //custom-theme -->
 	<link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.css" rel="stylesheet" />
-    <link href="css/blog.css" rel="stylesheet" type="text/css" media="all" />
-	<link href="css/single.css" rel="stylesheet" type="text/css" media="all" />
-	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="/css/blog.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="/css/single.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="/css/style.css" rel="stylesheet" type="text/css" media="all" />
 	<!-- font-awesome-icons -->
-	<link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
+	<link href="/css/font-awesome.css" rel="stylesheet">
 	<!-- //font-awesome-icons -->
 
 </head>
