--- a/html/hezuo2/list_gd_1.html
+++ b/html/hezuo2/list_gd_1.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="zxx">
-
+<html>
 <head>
-	<title>Blog</title>
+	<title>营销团队-德优城家居有限公司</title>
 	<!-- custom-theme -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="" />
+	<meta name="keywords" content="德优城,德优城家居,营销团队,成员列表,战略合作伙伴" />
+	<meta name="description" content="德优城家居有限公司旗下的强大营销推广团队成员列表" />
 	<link rel="icon" href="/favicon.ico" mce_href="/favicon.ico" type="image/x-icon">
 	<link rel="shortcut icon" href="/favicon.ico" mce_href="/favicon.ico" type="image/x-icon">
 	<!-- //custom-theme -->
@@ -14,7 +14,7 @@
 	<link href="/css/blog.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="/css/style.css" rel="stylesheet" type="text/css" media="all" />
 	<!-- font-awesome-icons -->
-	<link href="https://cdn.staticfile.org/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet" />
+	<link href="/css/font-awesome.css" rel="stylesheet" />
 	<!-- //font-awesome-icons -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,400,400i,500,500i,600,600i,700,700i,800" rel="stylesheet">
@@ -22,7 +22,6 @@
 
 <body>
 	<!-- banner -->
-
 	<div class="main_section_agile inner" id="home">
 		<div class="agileits_w3layouts_banner_nav">
 
@@ -87,58 +86,59 @@
 						<div class="event-left1-left agile-event-left1-left">
 							<a href="/hezuo2.html"><img src="/images/3/x-man1.png" alt=" " class="img-responsive" /></a>
 							<div class="event-left1-left-pos agileits-w3layouts-event-left1-left-pos">
-								<ul>
-									<li><a href="/hezuo2.html"><span class="fa fa-user" aria-hidden="true"></span> Leo Paul</a></li>
-								</ul>
+								<ul><li>
+								<a href="/hezuo2.html"><span class="fa fa-user" aria-hidden="true"></span>置顶文章</a>
+								</li></ul>		
 							</div>
 						</div>
 						<div class="event-left1-right w3-agileits-event-left1-right">
-							<h4>2nd / June 2017</h4>
+							<h4>2nd / June 2023</h4>
 							<h5><a href="/hezuo2.html">我们强大的营销团队</a></h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.In elementum, magna id pellentesque
-								auctor, risus dolor congue urna, nec dapibus eros magna a odio. Duis laoreet risus eget malesuada consequat.</p>
+							<p>德优城营销团队由行业内的精英人士组成，他们拥有丰富的营销经验和卓越的策划能力。无论是线上还是线下，无论是传统媒体还是新媒体，他们都能找到最恰当的切入点，将我们的产品和服务..</p>
 							<div class="agileits-button two">
-								<a class="btn btn-primary btn-lg hvr-underline-from-left" href="/hezuo2.html" role="button">Read More »</a>
+								<a class="btn btn-primary btn-lg hvr-underline-from-left" href="/hezuo2.html" role="button">查看详情 »</a>
 							</div>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
 					<div class="event-left1 w3-agile-event-left1">
 						<div class="event-left1-left agile-event-left1-left">
-							<a href="acticle_2.html"><img src="/images/3/x-women1.png" alt=" " class="img-responsive" /></a>
+							<a href="acticle_2.html">
+							<img src="/images/3/man1.png" style="background-color:#ffb61e;" class="img-responsive" />
+							</a>
 							<div class="event-left1-left-pos agileits-w3layouts-event-left1-left-pos">
-								<ul>
-									<li><a href="acticle_2.html"><span class="fa fa-user" aria-hidden="true"></span> John Paul</a></li>
-								</ul>
+								<ul><li>
+								<a href="acticle_2.html"><span class="fa fa-user" aria-hidden="true"></span>谢先生</a>
+								</li></ul>
 							</div>
 						</div>
 						<div class="event-left1-right w3-agileits-event-left1-right">
-							<h4>22nd / June 2017</h4>
-							<h5><a href="acticle_2.html">广东黎先生</a></h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.In elementum, magna id pellentesque
-								auctor, risus dolor congue urna, nec dapibus eros magna a odio. Duis laoreet risus eget malesuada consequat.</p>
+							<h4>22nd / June 2023</h4>
+							<h5><a href="acticle_2.html">佛山谢先生</a></h5>
+							<p>作为一名资深家具专家,谢先生拥有超过20年的行业经验和专业知识.从一开始就对家具设计销售和制作产生了浓厚的兴趣,
+								并在工作中不断追求专业创新的成长技能提升.谢先生拥有专业的家具设计和制作实战..</p>
 							<div class="agileits-button two">
-								<a class="btn btn-primary btn-lg hvr-underline-from-left" href="acticle_2.html" role="button">Read More »</a>
+								<a class="btn btn-primary btn-lg hvr-underline-from-left" href="acticle_2.html" role="button">查看详情 »</a>
 							</div>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
 					<div class="event-left1 w3-agile-event-left1">
 						<div class="event-left1-left w3ls-event-left1-left">
-							<a href="acticle_1.html"><img src="/images/3/x-women1.png" alt=" " class="img-responsive" /></a>
+							<a href="acticle_1.html"><img src="/images/3/man2.png" style="background-color:#a98175;" class="img-responsive" /></a>
 							<div class="event-left1-left-pos w3l-event-left1-left-pos">
-								<ul>
-									<li><a href="acticle_1.html"><span class="fa fa-user" aria-hidden="true"></span>Richard</a></li>
-								</ul>
+								<ul><li>
+								<a href="acticle_1.html"><span class="fa fa-user" aria-hidden="true"></span>黎先生</a>
+								</li></ul>
 							</div>
 						</div>
 						<div class="event-left1-right w3-event-left1-right">
-							<h4>28th / June 2017</h4>
-							<h5><a href="acticle_1.html">广东谢先生</a></h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.In elementum, magna id pellentesque
-								auctor, risus dolor congue urna, nec dapibus eros magna a odio. Duis laoreet risus eget malesuada consequat.</p>
+							<h4>28th / June 2023</h4>
+							<h5><a href="acticle_1.html">三水黎先生</a></h5>
+							<p>黎先生是一位拥有多年室内设计经验的专业人士，他的专业技能涵盖了室内设计的各个方面。
+								首先，黎先生对于空间布局的设计非常擅长.</p>
 							<div class="agileits-button two">
-								<a class="btn btn-primary btn-lg hvr-underline-from-left" href="acticle_1.html" role="button">Read More »</a>
+								<a class="btn btn-primary btn-lg hvr-underline-from-left" href="acticle_1.html" role="button">查看详情 »</a>
 							</div>
 						</div>
 						<div class="clearfix"> </div>
@@ -163,63 +163,62 @@
 						</ul>
 					</nav>
 				</div>
+				<!--/Event-->
 				<div class="col-md-4 event-right wthree-event-right">
 					<div class="event-right1 agileinfo-event-right1">
-						<div class="search1 agileits-search1">
-							<form action="#" method="post">
-								<input type="search" name="Search" placeholder="Search here..." required="">
-								<input type="submit" value="Send">
-							</form>
-						</div>
 						<div class="categories w3ls-categories">
-							<h3>Categories</h3>
+							<h3>地区团队</h3>
 							<ul>
-								<li><i class="fa fa-check" aria-hidden="true"></i><a href="single.html">At vero eos et accusamus iusto</a></li>
-								<li><i class="fa fa-check" aria-hidden="true"></i><a href="single.html">Sed ut perspiciatis unde omnis</a></li>
-								<li><i class="fa fa-check" aria-hidden="true"></i><a href="single.html">Accusantium doloremque lauda</a></li>
-								<li><i class="fa fa-check" aria-hidden="true"></i><a href="single.html">Vel illum qui dolorem fugiat quo</a></li>
-								<li><i class="fa fa-check" aria-hidden="true"></i><a href="single.html">Quis autem vel eum reprehenderit</a></li>
-								<li><i class="fa fa-check" aria-hidden="true"></i><a href="single.html">Neque porro quisquam est qui</a></li>
+								<li><i class="fa fa-check" aria-hidden="true"></i>
+								<a href="javascript:;">广东省团队 (128人)</a></li>
+								<li><i class="fa fa-check" aria-hidden="true"></i>
+								<a href="javascript:;">广西省团队 (108人)</a></li>
+								<li><i class="fa fa-check" aria-hidden="true"></i>
+								<a href="javascript:;">江西省团队 (18人)</a></li>
+								<li><i class="fa fa-check" aria-hidden="true"></i>
+								<a href="javascript:;">福建省团队 (25人)</a></li>
+								<li><i class="fa fa-check" aria-hidden="true"></i>
+								<a href="javascript:;">湖南省团队 (38人)</a></li>	
+								<li><i class="fa fa-check" aria-hidden="true"></i>
+								<a href="javascript:;">海南省团队 (15人)</a></li>
+
 							</ul>
 						</div>
 						<div class="posts w3l-posts">
-							<h3>Our Events</h3>
+							<h3>更多资讯</h3>
 							<div class="posts-grids w3-posts-grids">
 								<div class="posts-grid w3-posts-grid">
 									<div class="posts-grid-left w3-posts-grid-left">
-										<a href="single.html"><img src="/images/g3.jpg" alt=" " class="img-responsive" /></a>
+										<a href="hezuo2.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/news-yxtd.jpg" alt="" class="img-responsive" /></a>
 									</div>
 									<div class="posts-grid-right w3-posts-grid-right">
-										<h4><a href="single.html">Sed ut perspiciatis unde omnis iste natus</a></h4>
+										<h4><a href="hezuo2.html">德优城旗下强大的营销团队</a></h4>
 										<ul class="wthree_blog_events_list">
-											<li><i class="fa fa-calendar" aria-hidden="true"></i>10/7/2017</li>
-											<li><i class="fa fa-user" aria-hidden="true"></i><a href="single.html">Admin</a></li>
+											<li><i class="fa fa-calendar" aria-hidden="true"></i>10/7/2022</li>
 										</ul>
 									</div>
 									<div class="clearfix"> </div>
 								</div>
 								<div class="posts-grid w3-posts-grid">
 									<div class="posts-grid-left w3-posts-grid-left">
-										<a href="single.html"><img src="/images/g6.jpg" alt=" " class="img-responsive" /></a>
+										<a href="ximengsi.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/news-xms.jpg" alt=" " class="img-responsive" /></a>
 									</div>
 									<div class="posts-grid-right w3-posts-grid-right">
-										<h4><a href="single.html">Neque porro quisquam qui dolorem</a></h4>
+										<h4><a href="ximengsi.html">与美国席梦思成为战略合作伙伴</a></h4>
 										<ul class="wthree_blog_events_list">
-											<li><i class="fa fa-calendar" aria-hidden="true"></i>12/7/2017</li>
-											<li><i class="fa fa-user" aria-hidden="true"></i><a href="single.html">Admin</a></li>
+											<li><i class="fa fa-calendar" aria-hidden="true"></i>12/7/2022</li>
 										</ul>
 									</div>
 									<div class="clearfix"> </div>
 								</div>
 								<div class="posts-grid w3-posts-grid">
 									<div class="posts-grid-left w3-posts-grid-left">
-										<a href="single.html"><img src="/images/g4.jpg" alt=" " class="img-responsive" /></a>
+										<a href="/html/hezuo2/acticle_2.html"><img src="https://i1.wp.com/deyoucheng.com/images/2/news-xms.jpg" alt=" " class="img-responsive" /></a>
 									</div>
 									<div class="posts-grid-right w3-posts-grid-right">
-										<h4><a href="single.html">Nemo enim ipsam voluptatem quia</a></h4>
+										<h4><a href="/html/hezuo2/acticle_2.html">广东谢先生</a></h4>
 										<ul class="wthree_blog_events_list">
-											<li><i class="fa fa-calendar" aria-hidden="true"></i>13/8/2017</li>
-											<li><i class="fa fa-user" aria-hidden="true"></i><a href="single.html">Admin</a></li>
+											<li><i class="fa fa-calendar" aria-hidden="true"></i>12/7/2022</li>
 										</ul>
 									</div>
 									<div class="clearfix"> </div>
@@ -227,26 +226,17 @@
 							</div>
 						</div>
 						<div class="tags tags1 w3layouts-tags">
-							<h3>Recent Tags</h3>
+							<h3>标签</h3>
 							<ul>
-								<li><a href="single.html">Designs</a></li>
-								<li><a href="single.html">Growth</a></li>
-								<li><a href="single.html">Latest</a></li>
-								<li><a href="single.html">Price</a></li>
-								<li><a href="single.html">Tools</a></li>
-								<li><a href="single.html">Agile</a></li>
-								<li><a href="single.html">Category</a></li>
-								<li><a href="single.html">Themes</a></li>
-								<li><a href="single.html">Growth</a></li>
-								<li><a href="single.html">Agile</a></li>
-								<li><a href="single.html">Price</a></li>
-								<li><a href="single.html">Tools</a></li>
-								<li><a href="single.html">Business</a></li>
-								<li><a href="single.html">Category</a></li>
+								<li><a href="javascript:;">合作伙伴</a></li>
+								<li><a href="javascript:;">厂商风采</a></li>
+								<li><a href="javascript:;">战略伙伴</a></li>
+								<li><a href="javascript:;">工厂实力</a></li>
 							</ul>
 						</div>
 					</div>
 				</div>
+				<!--//Event-->
 				<div class="clearfix"> </div>
 			</div>
 		</div>
@@ -257,45 +247,31 @@
 	<div class="footer">
 		<div class="f-bg-w3l">
 			<div class="container">
+				<div class="col-md-3 w3layouts_footer_grid">
+					<h2>联系<span>我们</span></h2>
+					    <ul class="con_inner_text">
+							<li><span class="fa fa-map-marker" aria-hidden="true">
+							</span>广东省顺德区乐从镇南村工业区<label>佛山市德优城家居有限公司</label></li>
+							<li><span class="fa fa-envelope-o" aria-hidden="true"></span>dychome@126.com</li>
+							<li><span class="fa fa-phone" aria-hidden="true"></span>+86 13800138000</li>
+						</ul>
+				</div>
 				<div class="col-md-4 w3layouts_footer_grid">
-					<h2>Subscribe <span>NewsLetter</span></h2>
-					<p>By subscribing to our mailing list you will always get latest news from us.</p>
-					<form action="#" method="post">
-						<input type="email" name="Email" placeholder="Enter your email..." required="">
-						<button class="btn1"><i class="fa fa-envelope-o" aria-hidden="true"></i></button>
-						<div class="clearfix"> </div>
-					</form>
-
-
+					<h2>站内<span>导航</span></h2>
+					<p><a href="javascript:;">产品中心</a><a>服务案例</a><a>招商加盟</a><a>家居百科</a><a>关于我们</a></p>
 				</div>
 				<div class="col-md-5 w3layouts_footer_grid">
-					<h3>Recent <span>Works</span></h3>
-					<ul class="con_inner_text midimg">
-						<li><a href="#"><img src="/images/banner22.jpg" alt="" class="img-responsive" /></a></li>
-						<li><a href="#"><img src="/images/banner33.jpg" alt="" class="img-responsive" /></a></li>
-						<li><a href="#"><img src="/images/banner44.jpg" alt="" class="img-responsive" /></a></li>
-						<li><a href="#"><img src="/images/banner11.jpg" alt="" class="img-responsive" /></a></li>
-					</ul>
-
+					<h3>关注<span>我们</span></h3>
+					<p>扫描下方二维码，关注德优城公众号</p>
+					 <ul class="con_inner_text midimg">
+						<li><a href="#"><img src="https://i1.wp.com/deyoucheng.com/images/2/qrcode_for_gh.png" alt="" class="img-responsive" /></a></li>
+				     </ul>
+					
 				</div>
-				<div class="col-md-3 w3layouts_footer_grid">
-					<h2>Contact <span>Us</span></h2>
-					<ul class="con_inner_text">
-						<li><span class="fa fa-map-marker" aria-hidden="true"></span>1234k Avenue, 4th block, <label> New York City.</label></li>
-						<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:info@example.com">info@example.com</a></li>
-						<li><span class="fa fa-phone" aria-hidden="true"></span> +1234 567 567</li>
-					</ul>
-
-					<ul class="social_agileinfo">
-						<li><a href="#" class="w3_facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" class="w3_twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" class="w3_instagram"><i class="fa fa-instagram"></i></a></li>
-						<li><a href="#" class="w3_google"><i class="fa fa-google-plus"></i></a></li>
-					</ul>
-				</div>
+				
 
 				<div class="clearfix"> </div>
-				<p class="copyright">Copyright &copy; 2018.Company name All rights reserved.<a target="_blank" href="http://www.cssmoban.com/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+					<p class="copyright">Copyright &copy;2023.德优城 All rights reserved.</p>
 			</div>
 		</div>
 	</div>
