--- a/html/hezuo2/acticle_1.html
+++ b/html/hezuo2/acticle_1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>四会黎先生-德优城家居有限公司</title>
+	<title>黎先生加入-德优城家居有限公司</title>
 	<!-- custom-theme -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -14,10 +14,7 @@
     <link href="/css/blog.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="/css/single.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="/css/style.css" rel="stylesheet" type="text/css" media="all" />
-	<!-- font-awesome-icons -->
-	<link href="https://cdn.staticfile.org/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
-	<!-- //font-awesome-icons -->
-
+	<link href="/css/font-awesome.css" rel="stylesheet">
 </head>
 
 <body>
@@ -79,21 +76,21 @@
 	<div class="banner-bottom inner">
 		<div class="container">
 			<div class="wthree_head_section">
-				<h3 class="w3l_header w3_agileits_header">[核心]广东谢先生</h3>
-				<h4></h4>
+				<h3 class="w3l_header w3_agileits_header">
+				<span class="fa fa-trophy coppery" aria-hidden="true"></span>黎先生[三水]</h3>
 			</div>
 			<div class="agile_wthree_inner_grids">
 				<div class="col-md-8 single-left">
 					<div class="single-left1">
 						<img src="https://i1.wp.com/deyoucheng.com/images/2/woshou1.jpg" alt=" " class="img-responsive" />
-						<h3>谢先生加入德优城大家庭!</h3>
+						<h3>黎先生加入德优城大家庭!</h3>
 						<ul>
 							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">合作伙伴</a></li>
 							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">推广加盟</a></li>
 							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">营销伙伴</a></li>
 						</ul>
 						<p>黎先生是一位拥有多年室内设计经验的专业人士，他的专业技能涵盖了室内设计的各个方面。首先，黎先生对于空间布局的设计非常擅长，他能够根据客户的需求和生活习惯，设计出最符合客户需求的空间布局。其次，黎先生对于色彩搭配和灯光设计也非常熟悉，他能够通过合理的色彩搭配和灯光设计，营造出最适合客户需求的室内氛围。此外，黎先生还非常注重细节，他能够从客户的角度出发，设计出最符合客户需求的室内细节，使室内空间更加完美。</p>
-							<img src="/images/3/20231206114947xie.jpg" alt="营销团队" class="img-responsive" />
+							<img src="/images/3/li_20231206114939.jpg" alt="合作合影" class="img-responsive" />
 							
 						<p>黎先生的加入德优城家居有限公司的心路历程也非常值得一提。黎先生一开始是通过德优城家居有限公司的官网了解到该公司的，在了解的企业文化和产品之后，黎先生深深地被该公司的理念所吸引。随后，黎先生与该公司的营销团队进行了一系列的交谈和协商，在交流中，黎先生感受到了该公司对员工的关注和尊重，这让他更加愿意加入德优城的营销团队。</p>
 					</div>
