--- a/html/yxtd/acticle_3.html
+++ b/html/yxtd/acticle_3.html
@@ -85,13 +85,9 @@
 			<div class="agile_wthree_inner_grids">
 				<div class="col-md-8 single-left">
 					<div class="single-left1">
+						<h3>欢迎刘先生加入德优城大家庭！</h3>
 						<img src="https://i1.wp.com/deyoucheng.com/images/2/woshou1.jpg" alt=" " class="img-responsive" />
-						<h3>刘先生加入德优城大家庭!</h3>
-						<ul>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">合作伙伴</a></li>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">推广加盟</a></li>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">营销伙伴</a></li>
-						</ul>
+						<ul><li><span class="equity">【特许权益】刘先生享有公司出厂价格</span></li></ul>
 					<p><i>诚邀家居行业精英，共创美好未来！</i>&nbsp;&nbsp;德优城营销专业总监，负责家具公寓、民用工程单的设计方案。拥有超过20余年的市场营销经验，曾在多家知名家具企业和设计公司担任要职，对家具行业和设计领域有深入理解和独特见解。
 					</p>
 					<img src="https://i1.wp.com/deyoucheng.com/images/3/liu_20231206115436.jpg" alt="合作合影" class="img-responsive" />
