--- a/html/yxtd/acticle_7.html
+++ b/html/yxtd/acticle_7.html
@@ -85,13 +85,9 @@
 			<div class="agile_wthree_inner_grids">
 				<div class="col-md-8 single-left">
 					<div class="single-left1">
+						<h3>欢迎陈先生加入德优城大家庭！</h3>
 						<img src="https://i1.wp.com/deyoucheng.com/images/2/woshou1.jpg" alt=" " class="img-responsive" />
-						<h3>陈先生加入德优城大家庭!</h3>
-						<ul>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">合作伙伴</a></li>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">推广加盟</a></li>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">营销伙伴</a></li>
-						</ul>
+						<ul><li><span class="equity">【特许权益】陈先生享有公司出厂价格</span></li></ul>
 					<p><i>诚邀家居行业精英，共创美好未来！</i>&nbsp;&nbsp;作为一名专业安装家具、销售一体专员，我们不仅具备丰富的家具安装技能，还拥有出色的销售技巧。我们深知家具对于家庭的重要性，因此我们始终以客户为中心，提供优质的服务。
 					</p>
 					<img src="https://i1.wp.com/deyoucheng.com/images/3/chen_20231206115700.jpg" alt="合作合影" class="img-responsive" />
