--- a/html/yxtd/list_all.html
+++ b/html/yxtd/list_all.html
@@ -89,7 +89,7 @@
 							</a>
 							<div class="event-left1-left-pos agileits-w3layouts-event-left1-left-pos">
 								<ul><li>
-								<a href="acticle_0.html"><span class="fa fa-user" aria-hidden="true"></span>置顶文章</a>
+								<a href="acticle_0.html"><span class="fa fa-users" aria-hidden="true"></span>置顶文章</a>
 								</li></ul>		
 							</div>
 						</div>
