--- a/html/yxtd/acticle_1.html
+++ b/html/yxtd/acticle_1.html
@@ -82,13 +82,9 @@
 			<div class="agile_wthree_inner_grids">
 				<div class="col-md-8 single-left">
 					<div class="single-left1">
+						<h3>欢迎邹先生加入德优城大家庭！</h3>
 						<img src="https://i1.wp.com/deyoucheng.com/images/2/woshou1.jpg" alt=" " class="img-responsive" />
-						<h3>欢迎邹先生加入德优城大家庭!</h3>
-						<ul>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">合作伙伴</a></li>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">推广加盟</a></li>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">营销伙伴</a></li>
-						</ul>
+						<ul><li><span class="equity">【特许权益】邹先生享有公司出厂价格</span></li></ul>
 						<p>&nbsp;&nbsp;邹先生是一位营销专业总监，负责岩板五金家具、民用工程单的设计方案。拥有超过10年的终端市场门店营销经验，服务过超100+以上优秀经销门店实战经验，为客户设计过众多成功案例。
 						</p>
 						<p>&nbsp;&nbsp;邹先生对岩板五金家具行业和设计领域有深入理解和独特见解。成功主导多个大型楼盘工程方案，为客户提供一站式家居解决方案，赢得了广泛好评。
