--- a/html/yxtd/acticle_10.html
+++ b/html/yxtd/acticle_10.html
@@ -85,13 +85,9 @@
 			<div class="agile_wthree_inner_grids">
 				<div class="col-md-8 single-left">
 					<div class="single-left1">
+						<h3>欢迎邹先生加入德优城大家庭！</h3>
 						<img src="https://i1.wp.com/deyoucheng.com/images/2/woshou1.jpg" alt=" " class="img-responsive" />
-						<h3>邹先生加入德优城大家庭!</h3>
-						<ul>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">合作伙伴</a></li>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">推广加盟</a></li>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">营销伙伴</a></li>
-						</ul>
+						<ul><li><span class="equity">【特许权益】邹先生享有公司出厂价格</span></li></ul>
 					<p><i>诚邀家居行业精英，共创美好未来！</i>&nbsp;&nbsp;作为一名专业的配送安装家具销售专员，我拥有丰富的行业经验和卓越的销售技巧。我热衷于为客户提供优质的产品和服务，以满足他们的家具需求。
 					</p>
 					<img src="https://i1.wp.com/deyoucheng.com/images/3/zou_20231206115003.jpg" alt="合作合影" class="img-responsive" />
