--- a/html/yxtd/acticle_13.html
+++ b/html/yxtd/acticle_13.html
@@ -85,13 +85,9 @@
 			<div class="agile_wthree_inner_grids">
 				<div class="col-md-8 single-left">
 					<div class="single-left1">
+						<h3>欢迎尹先生加入德优城大家庭！</h3>
 						<img src="https://i1.wp.com/deyoucheng.com/images/2/woshou1.jpg" alt=" " class="img-responsive" />
-						<h3>尹先生加入德优城大家庭!</h3>
-						<ul>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">合作伙伴</a></li>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">推广加盟</a></li>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">营销伙伴</a></li>
-						</ul>
+						<ul><li><span class="equity">【特许权益】尹先生享有公司出厂价格</span></li></ul>
 					<p><i>诚邀家居行业精英，共创美好未来！</i>&nbsp;&nbsp;作为一名专业资深销售招商全屋整体家具顾问，我拥有丰富的行业经验和卓越的销售技巧。我擅长为客户提供一站式的家居解决方案，从全屋整体家具的设计、选材、配置到安装、售后服务，为客户提供全方位的服务。
 					</p>
 					<img src="https://i1.wp.com/deyoucheng.com/images/3/yin_20231212220408.jpg" alt="合作合影" class="img-responsive" />
