--- a/html/yxtd/acticle_2.html
+++ b/html/yxtd/acticle_2.html
@@ -85,13 +85,9 @@
 			<div class="agile_wthree_inner_grids">
 				<div class="col-md-8 single-left">
 					<div class="single-left1">
+						<h3>欢迎植先生加入德优城大家庭！</h3>
 						<img src="https://i1.wp.com/deyoucheng.com/images/2/woshou1.jpg" alt=" " class="img-responsive" />
-						<h3>植先生加入德优城大家庭!</h3>
-						<ul>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">合作伙伴</a></li>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">推广加盟</a></li>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">营销伙伴</a></li>
-						</ul>
+						<ul><li><span class="equity">【特许权益】植先生享有公司出厂价格</span></li></ul>
 					<p><i>诚邀家居行业精英，共创美好未来！</i>&nbsp;&nbsp;植先生作为一名全屋定制的资深工程师，深知家不仅是生活的容器，更是精神的港湾。他以匠心独运的工艺，精雕细琢的技艺，为每位客户打造一个专属的私人定制空间。植先生熟悉各种材料，了解各种工艺，精通家具设计，用心感受空间美学。
 					</p>
 					<img src="https://i1.wp.com/deyoucheng.com/images/3/zhi_20231206114849.jpg" alt="合作合影" class="img-responsive" />
