--- a/html/yxtd/acticle_9.html
+++ b/html/yxtd/acticle_9.html
@@ -85,13 +85,9 @@
 			<div class="agile_wthree_inner_grids">
 				<div class="col-md-8 single-left">
 					<div class="single-left1">
+						<h3>欢迎莫小姐加入德优城大家庭！</h3>
 						<img src="https://i1.wp.com/deyoucheng.com/images/2/woshou1.jpg" alt=" " class="img-responsive" />
-						<h3>莫小姐加入德优城大家庭!</h3>
-						<ul>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">合作伙伴</a></li>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">推广加盟</a></li>
-							<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">营销伙伴</a></li>
-						</ul>
+						<ul><li><span class="equity">【特许权益】莫小姐享有公司出厂价格</span></li></ul>
 					<p><i>诚邀家居行业精英，共创美好未来！</i>&nbsp;&nbsp;作为一名专业资深销售全屋整体家具的专家，我们深知家具对于家居生活的重要性。我们致力于为客户提供高品质、舒适且实用的全屋整体家具解决方案，让您的家居空间更加美观、实用和舒适。
 					</p>
 					<img src="https://i1.wp.com/deyoucheng.com/images/3/mo_20231212220430.jpg" alt="合作合影" class="img-responsive" />
