--- a/html/yxtd/list_all.html
+++ b/html/yxtd/list_all.html
@@ -168,7 +168,7 @@
 					
 					<div class="event-left1 w3-agile-event-left1">
 						<div class="event-left1-left w3ls-event-left1-left">
-							<a href="acticle_4.html"><img src="https://i1.wp.com/deyoucheng.com/images/3/a-man2.png" style="background-color:#f0fcff;" class="img-responsive" /></a>
+							<a href="acticle_4.html"><img src="https://i1.wp.com/deyoucheng.com/images/3/a-man2.png" style="background-color:#c2ccd0;" class="img-responsive" /></a>
 							<div class="event-left1-left-pos w3l-event-left1-left-pos">
 								<ul><li>
 								<a href="acticle_4.html"><span class="fa fa-user" aria-hidden="true"></span>刘先生</a>
@@ -181,6 +181,26 @@
 							<p>全实木家具的资深专家，我拥有丰富的行业经验和专业的技术知识，精通从生产到销售的一体化管理，致力于为客户提供高品质的全实木家具...</p>
 							<div class="agileits-button two">
 								<a class="btn btn-primary btn-lg hvr-underline-from-left" href="acticle_4.html" role="button">查看详情 »</a>
+							</div>
+						</div>
+						<div class="clearfix"> </div>
+					</div>
+					
+					<div class="event-left1 w3-agile-event-left1">
+						<div class="event-left1-left w3ls-event-left1-left">
+							<a href="acticle_14.html"><img src="https://i1.wp.com/deyoucheng.com/images/3/a-man1.png" style="background-color:#f0fcff;" class="img-responsive" /></a>
+							<div class="event-left1-left-pos w3l-event-left1-left-pos">
+								<ul><li>
+								<a href="acticle_14.html"><span class="fa fa-user" aria-hidden="true"></span>刘先生</a>
+								</li></ul>
+							</div>
+						</div>
+						<div class="event-left1-right w3-event-left1-right">
+							<h4>8th / July 2023</h4>
+							<h5><a href="acticle_14.html">谢先生</a></h5>
+							<p>资深家具专家，我拥有超过20年的行业经验和专业知识。我拥有专业的家具设计和制作实战，并且不断参加相关的培训和研究生产，以确保自己的产品和设计始终保持创新...</p>
+							<div class="agileits-button two">
+								<a class="btn btn-primary btn-lg hvr-underline-from-left" href="acticle_14.html" role="button">查看详情 »</a>
 							</div>
 						</div>
 						<div class="clearfix"> </div>
