--- a/html/yxtd/acticle_14.html
+++ b/html/yxtd/acticle_14.html
@@ -82,9 +82,8 @@
 			<div class="agile_wthree_inner_grids">
 				<div class="col-md-8 single-left">
 					<div class="single-left1">
-						<h3>欢迎谢先生加入德优城大家庭！</h3>
 						<img src="https://i1.wp.com/deyoucheng.com/images/2/woshou1.jpg" alt=" " class="img-responsive" />
-						<ul><li><span class="equity">【特许权益】谢先生享有公司出厂价格</span></li></ul>
+						<ul><li><span class="equity">【特许权益】德优城内部人员</span></li></ul>
 						<p>&nbsp;&nbsp;作为一名资深家具专家，谢先生拥有超过20年的行业经验和专业知识。从一开始就对家具设计销售和制作产生了浓厚的兴趣，并在工作中不断追求专业创新的成长技能提升。谢先生拥有专业的家具设计和制作实战，并且不断参加相关的培训和研究生产，以确保自己的产品和设计始终保持创新。
 						</p>
 						<p>&nbsp;&nbsp;
@@ -184,7 +183,7 @@
 							<li><span class="fa fa-map-marker" aria-hidden="true">
 							</span>广东省顺德区乐从镇南村工业区<label>佛山市德优城家居有限公司</label></li>
 							<li><span class="fa fa-envelope-o" aria-hidden="true"></span>dychome@126.com</li>
-							<li><span class="fa fa-phone" aria-hidden="true"></span>+86 13800138000</li>
+							<li><span class="fa fa-phone" aria-hidden="true"></span>+86 13790013467</li>
 						</ul>
 				</div>
 				<div class="col-md-4 w3layouts_footer_grid">
