--- a/html/yxtd/acticle_14.html
+++ b/html/yxtd/acticle_14.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>谢先生加入-德优城家居有限公司</title>
+	<title>谢先生-德优城家居有限公司</title>
 	<!-- custom-theme -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
