--- a/html/yxtd/acticle_1.html
+++ b/html/yxtd/acticle_1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>邹先生加入-德优城家居有限公司</title>
+	<title>邹先生-德优城家居有限公司</title>
 	<!-- custom-theme -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -84,7 +84,7 @@
 					<div class="single-left1">
 						<h3>欢迎邹先生加入德优城大家庭！</h3>
 						<img src="https://i1.wp.com/deyoucheng.com/images/2/woshou1.jpg" alt=" " class="img-responsive" />
-						<ul><li><span class="equity">【特许权益】邹先生享有公司出厂价格</span></li></ul>
+						<ul><li><span class="equity">【特许权益】德优城内部人员</span></li></ul>
 						<p>&nbsp;&nbsp;邹先生是一位营销专业总监，负责岩板五金家具、民用工程单的设计方案。拥有超过10年的终端市场门店营销经验，服务过超100+以上优秀经销门店实战经验，为客户设计过众多成功案例。
 						</p>
 						<p>&nbsp;&nbsp;邹先生对岩板五金家具行业和设计领域有深入理解和独特见解。成功主导多个大型楼盘工程方案，为客户提供一站式家居解决方案，赢得了广泛好评。
