--- a/html/yxtd/acticle_6.html
+++ b/html/yxtd/acticle_6.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>陈先生加入-德优城家居有限公司</title>
+	<title>陈先生-德优城家居有限公司</title>
 	<!-- custom-theme -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -87,7 +87,7 @@
 					<div class="single-left1">
 						<h3>欢迎陈先生加入德优城大家庭！</h3>
 						<img src="https://i1.wp.com/deyoucheng.com/images/2/woshou1.jpg" alt=" " class="img-responsive" />
-						<ul><li><span class="equity">【特许权益】陈先生享有公司出厂价格</span></li></ul>
+						<ul><li><span class="equity">【特许权益】德优城内部人员</span></li></ul>
 					<p><i>诚邀家居行业精英，共创美好未来！</i>&nbsp;&nbsp;作为一名从事家具行业多年销售经验的专业人士，我深深地热爱着这份工作。在此期间，我积累了丰富的行业知识和销售技巧，为客户提供优质的服务和解决方案。
 					</p>
 					<img src="https://i1.wp.com/deyoucheng.com/images/3/chen_20231206114855.jpg" alt="合作合影" class="img-responsive" />
