--- a/html/yxtd/acticle_0.html
+++ b/html/yxtd/acticle_0.html
@@ -54,7 +54,7 @@
 									<li><a href="javascript:;">家具科普</a></li>
 								</ul>
 							</li>
-							<li><a href="javascript:;" class="effect-3">关于我们</a></li>
+							<li><a href="/aboutus.html" class="effect-3">关于我们</a></li>
 						</ul>
 					</nav>
 				</div>
