--- a/html/yxtd/acticle_15.html
+++ b/html/yxtd/acticle_15.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>袁先生-德优城家居有限公司</title>
+	<title>袁先生加入-德优城家居有限公司</title>
 	<!-- custom-theme -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -51,7 +51,7 @@
 									<li><a href="javascript:;">家具科普</a></li>
 								</ul>
 							</li>
-							<li><a href="javascript:;" class="effect-3">关于我们</a></li>
+							<li><a href="/aboutus.html" class="effect-3">关于我们</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -182,7 +182,7 @@
 							<li><span class="fa fa-map-marker" aria-hidden="true">
 							</span>广东省顺德区乐从镇南村工业区<label>佛山市德优城家居有限公司</label></li>
 							<li><span class="fa fa-envelope-o" aria-hidden="true"></span>dychome@126.com</li>
-							<li><span class="fa fa-phone" aria-hidden="true"></span>+86 13800138000</li>
+							<li><span class="fa fa-phone" aria-hidden="true"></span>+86 13790013467</li>
 						</ul>
 				</div>
 				<div class="col-md-4 w3layouts_footer_grid">
