--- a/html/yxtd/acticle_8.html
+++ b/html/yxtd/acticle_8.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>刘小姐-德优城家居有限公司</title>
+	<title>刘小姐加入-德优城家居有限公司</title>
 	<!-- custom-theme -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -54,7 +54,7 @@
 									<li><a href="javascript:;">家具科普</a></li>
 								</ul>
 							</li>
-							<li><a href="javascript:;" class="effect-3">关于我们</a></li>
+							<li><a href="/aboutus.html" class="effect-3">关于我们</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -87,7 +87,7 @@
 					<div class="single-left1">
 						<h3>欢迎刘小姐加入德优城大家庭！</h3>
 						<img src="https://i1.wp.com/deyoucheng.com/images/2/woshou1.jpg" alt=" " class="img-responsive" />
-						<ul><li><span class="equity">【特许权益】德优城内部人员</span></li></ul>
+						<ul><li><span class="equity">【特许权益】刘小姐享有公司出厂价格</span></li></ul>
 					<p><i>诚邀家居行业精英，共创美好未来！</i>&nbsp;&nbsp;作为一名专业资深销售全屋家具总监，我们拥有丰富的行业经验和卓越的销售技巧。我们深知家具对于家居生活的重要性，因此我们始终致力于为客户提供高品质、舒适且实用的全屋家具解决方案。
 					</p>
 					<img src="https://i1.wp.com/deyoucheng.com/images/3/liu_20231206115049.jpg" alt="合作合影" class="img-responsive" />
