--- a/html/yxtd/acticle_11.html
+++ b/html/yxtd/acticle_11.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>邹先生-德优城家居有限公司</title>
+	<title>邹先生加入-德优城家居有限公司</title>
 	<!-- custom-theme -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -54,7 +54,7 @@
 									<li><a href="javascript:;">家具科普</a></li>
 								</ul>
 							</li>
-							<li><a href="javascript:;" class="effect-3">关于我们</a></li>
+							<li><a href="/aboutus.html" class="effect-3">关于我们</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -87,7 +87,7 @@
 					<div class="single-left1">
 						<h3>欢迎邹先生加入德优城大家庭！</h3>
 						<img src="https://i1.wp.com/deyoucheng.com/images/2/woshou1.jpg" alt=" " class="img-responsive" />
-						<ul><li><span class="equity">【特许权益】德优城内部人员</span></li></ul>
+						<ul><li><span class="equity">【特许权益】邹先生享有公司出厂价格</span></li></ul>
 					<p><i>诚邀家居行业精英，共创美好未来！</i>&nbsp;&nbsp;作为一名专业的配送安装家具销售专员，我拥有丰富的行业经验和卓越的销售技巧。我热衷于为客户提供优质的产品和服务，以满足他们的家具需求。
 					</p>
 					<img src="https://i1.wp.com/deyoucheng.com/images/3/zou_20231206115000.jpg" alt="合作合影" class="img-responsive" />
